--- a/css/main.css
+++ b/css/main.css
@@ -42,12 +42,15 @@ body {
  */
 
 .film-title {
+  box-sizing: border-box;
   position: fixed;
-  left: 40px; top: 40px;
+  padding: 40px;
+  left: 0; width: 100%; text-align: center;
+  top: 30%;
 
   font-family: "Times New Roman", serif;
   color: white;
-  font-size: 40px;
+  font-size: 50px;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
   z-index: 1;
 }
@@ -59,6 +62,7 @@ body {
   background-color: white;
   box-shadow: 0 0 20px 2px rgba(255, 255, 255, 1.0);
   z-index: 1;
+  opacity: 0;
 
   -o-transition: all 1s linear;
   -moz-transition: all 1s linear;
